<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.alltasks.filter.FilterFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/filter_by_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_by_categories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_by_categories"
        app:singleSelection="false"></com.google.android.material.chip.ChipGroup>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categories" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:stepSize="1"
        android:valueFrom="1"
        android:valueTo="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priority" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sliderPriority" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_button_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status">

        <RadioButton
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/done" />

        <RadioButton
            android:id="@+id/planned"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/planned" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>