<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.alltasks.AllTasksFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/topAppBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sort"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_width="0dp"
                tools:text="@string/sample_option"
                app:layout_constraintEnd_toStartOf="@id/filter"
                android:gravity="center"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/filter"
                android:layout_width="0dp"
                android:text="@string/filter"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/sort"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="8dp"
                android:id="@+id/all_recycler"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/sort"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="16dp"
                android:contentDescription="@string/add_new_task"
                android:src="@drawable/ic_baseline_add_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include android:id="@+id/bottom_sort" layout="@layout/bottom_sheet"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>